--- a/Crop Yield Regional Interactive.ipynb
+++ b/Crop Yield Regional Interactive.ipynb
@@ -57,13 +57,11 @@
     "from ipywidgets import interact\n",
     "import folium\n",
     "from folium.plugins import HeatMap\n",
-    "#create pyproj transformer to convert form lat/long to web mercator\n",
-    "from pyproj import Transformer\n",
-    "transformer = Transformer.from_crs('epsg:4326','epsg:3857')\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", message=\"Cannot find a last shown plot to update.\")\n",
     "import datetime\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", message=\"Cannot find a last shown plot to update.\")\n"
    ]
   },
   {
@@ -470,9 +468,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python311-cropyield",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python311-cropyield"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -484,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
